--- a/lib/templates/Terra.xml
+++ b/lib/templates/Terra.xml
@@ -7,17 +7,25 @@
 	<form>
 		<fieldset	type="main">
 			<input	type="fixed"	perceivedType="text"	name="type"	get="yes"	post="yes"	value="xml"/>
-			<input	type="fixed"	perceivedType="text"	name="version"	get="yes"	post="yes"	value="0.3" />
+			<input	type="fixed"	perceivedType="text"	name="version"	get="yes"	post="yes"	value="0.4" />
 			<input	type="string"	perceivedType="name"	name="name"	saving="yes"	get="yes"	post="yes"	value=""	size="10"	label="名前"/>
 			<input	type="string"	perceivedType="text"	name="status"	saving="yes"	get="yes"	post="yes"	value=""	size="10"	label="状態"/>
 			<input	type="integer"	perceivedType="line"	name="line"	saving="yes"	get="yes"	post="yes"	value="20"	size="2"	label="行数"/>
 			<input	type="fixed"	perceivedType="mode"	name="mode"	post="yes"	get="yes"	value="msg" />
+<!--
+			<select	type="select"	perceivedType="text"	name="rt"	saving="yes"	get="yes"	post="yes"	label="更新">
+				<option	value="no">Active</option>
+				<option	value="yes">Realtime</option>
+			</select>
+-->
 			<line-break />
 			<input	type="string"	perceivedType="body"	name="body"	post="yes"	size="60"	label="発言"/>
 		</fieldset>
 		<fieldset	type="option">
 			<input	type="string"	perceivedType="color"	name="color"	saving="yes"	get="yes"	post="yes"	value="#888888"	size="10"	label="色"/>
 			<input	type="string"	perceivedType="text"	name="publicid"	saving="yes"	get="yes"	post="yes"	value=""	size="10"	label="ID"	datasrc="name"/>
+			<input	type="string"	perceivedType="email"	name="email" saving="yes" post="yes" value="" size="10" label="メッセ" />
+			<input	type="string"	perceivedType="uri"	name="uri" saving="yes" post="yes" value="" size="10" label="mixi" />
 			<input	type="string"	perceivedType="icon"	name="icon"	saving="yes"	get="yes"	post="yes"	value=""	size="10"	label="アイコン"/>
 			<input	type="integer"	perceivedType="text"	name="icon_width"	saving="yes"	get="yes"	post="yes"	value=""	size="2"	label="幅"/>
 			<input	type="integer"	perceivedType="text"	name="icon_height"	saving="yes"	get="yes"	post="yes"	value=""	size="2"	label="高さ"/>
