--- a/lib/Themes/Abyss/Abyss.css
+++ b/lib/Themes/Abyss/Abyss.css
@@ -1,10 +1,10 @@
-/*
+﻿/*
 
 	AjacChatWrapper default theme
 
 */
 
-﻿a {
+a {
 	color: #00F;
 	text-decoration: none;
 }
@@ -72,12 +72,12 @@ form{
 .layout{
 
 }
-.logMember {
+.chatMember {
 	padding: 2px;
 	background: #333;
 	border: #AAA dashed 1px;
 }
-.logMember img {
+.chatMember img {
 	vertical-align: middle;
 }
 .log{
