--- a/lib/Themes/Classic/Classic.css
+++ b/lib/Themes/Classic/Classic.css
@@ -1,4 +1,3 @@
-
 ﻿a {
 	color: #A0F;
 	text-decoration: none;
@@ -65,12 +64,12 @@ h1 {
 .layout{
 
 }
-.logMember {
+.chatMember {
 	padding: 2px;
 	background: #FEF;
 	border: #000 dashed 1px;
 }
-.logMember img {
+.chatMember img {
 	vertical-align: middle;
 }
 .log{
